# line_code_encoding

./: Makefile  meson.build
src/: 8b10b.cpp  8b10b.hpp
test/: consecutive_bits.cpp  count_zeros_ones.cpp
